--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   - docker run victor/docker-react npm run test -- --coverage
 
 deploy:
-  provider: elasticbeanstack
+  provider: elasticbeanstalk
   region: "us-east-2"
   app: "Docker"
   env: "Docker-env"
